--- a/index.html
+++ b/index.html
@@ -30,113 +30,23 @@
         <!-- first Row of Prizes -->
         <div class="row one-row">
 
-            <div class="col-md-2">
+            <div class="col-md-11">
                 <div class="card title">
-                    <img class="card-img-top" src="./images/iwatch.png" alt="Card image cap">
+                    <img class="card-img-top" src="./images/pig.jpg" alt="Card image cap">
                 </div>
             </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/iwatch.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/iwatch.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/ipad.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/ipad.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class=" card-img-top" src="./images/ipad.png" alt="Card image cap">
-                </div>
-            </div>
-
-        </div>
-
-        <!-- second Row of Prizes -->
-        <div class="row two-row">
-
-            <div class="col-md-3">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/tiffany.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/ring.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/bose.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/bose.png" alt="Card image cap">
+            <div class="col-md-1">
+                <div class="card title arrow">
+                    <a href = "./second.html"><img class="card-img-top" src="./images/arrow.png" alt="Card image cap"></a>
                 </div>
             </div>
 
 
         </div>
 
-        <!-- third Row of Prizes -->
-        <div class="row three-row">
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class=" card-img-top" src="./images/b1.png" alt="Card image cap">
-                </div>
-            </div>
+       
 
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/b2.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/blue-n.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/purple-n.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/gold-n.png" alt="Card image cap">
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="card title">
-                    <img class="card-img-top" src="./images/macbook.png" alt="Card image cap">
-                </div>
-            </div>
-
-        </div>
+        
 
     </div>
 
